--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>ShopeeFood - Giao hàng tận nơi</title>
+    <title>ShopeeFood - Ngon không cưỡng nổi</title>
     <meta name="description" content="Đặt món ngon từ hàng ngàn nhà hàng tại Sài Gòn. Giao hàng nhanh, nhiều ưu đãi hấp dẫn và sản phẩm OCOP đặc sắc.">
     <meta name="keywords" content="giao đồ ăn, đặt món online, ShopeeFood, food delivery, nhà hàng Sài Gòn, OCOP, ưu đãi">
     <meta name="author" content="ShopeeFood">
@@ -11,9 +11,9 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://catvinhquang.github.io/">
-    <meta property="og:title" content="ShopeeFood - Giao hàng tận nơi">
+    <meta property="og:title" content="ShopeeFood - Ngon không cưỡng nổi">
     <meta property="og:description" content="Đặt món ngon từ hàng ngàn nhà hàng tại Sài Gòn. Giao hàng nhanh, nhiều ưu đãi hấp dẫn và sản phẩm OCOP đặc sắc.">
-    <meta property="og:image" content="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1200 630'><rect width='1200' height='630' fill='%23EE4D2D'/><circle cx='600' cy='250' r='80' fill='white' opacity='0.9'/><path d='M550 220 L650 220 L630 270 L570 270 Z' fill='%23EE4D2D'/><circle cx='580' cy='200' r='15' fill='%23EE4D2D'/><circle cx='620' cy='200' r='15' fill='%23EE4D2D'/><rect x='540' y='330' width='120' height='60' rx='30' fill='white' opacity='0.9'/><circle cx='570' cy='410' r='25' fill='white' opacity='0.9'/><circle cx='630' cy='410' r='25' fill='white' opacity='0.9'/><rect x='550' y='385' width='80' height='8' fill='white' opacity='0.9'/><text x='600' y='500' text-anchor='middle' fill='white' font-family='Arial' font-size='48' font-weight='bold'>ShopeeFood</text><text x='600' y='550' text-anchor='middle' fill='white' font-family='Arial' font-size='28'>Giao hàng tận nơi</text></svg>">
+    <meta property="og:image" content="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1200 630'><rect width='1200' height='630' fill='%23EE4D2D'/><circle cx='600' cy='250' r='80' fill='white' opacity='0.9'/><path d='M550 220 L650 220 L630 270 L570 270 Z' fill='%23EE4D2D'/><circle cx='580' cy='200' r='15' fill='%23EE4D2D'/><circle cx='620' cy='200' r='15' fill='%23EE4D2D'/><rect x='540' y='330' width='120' height='60' rx='30' fill='white' opacity='0.9'/><circle cx='570' cy='410' r='25' fill='white' opacity='0.9'/><circle cx='630' cy='410' r='25' fill='white' opacity='0.9'/><rect x='550' y='385' width='80' height='8' fill='white' opacity='0.9'/><text x='600' y='500' text-anchor='middle' fill='white' font-family='Arial' font-size='48' font-weight='bold'>ShopeeFood</text><text x='600' y='550' text-anchor='middle' fill='white' font-family='Arial' font-size='28'>Ngon không cưỡng nổi</text></svg>">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:locale" content="vi_VN">
@@ -22,9 +22,9 @@
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://catvinhquang.github.io/">
-    <meta property="twitter:title" content="ShopeeFood - Giao hàng tận nơi">
+    <meta property="twitter:title" content="ShopeeFood - Ngon không cưỡng nổi">
     <meta property="twitter:description" content="Đặt món ngon từ hàng ngàn nhà hàng tại Sài Gòn. Giao hàng nhanh, nhiều ưu đãi hấp dẫn và sản phẩm OCOP đặc sắc.">
-    <meta property="twitter:image" content="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1200 630'><rect width='1200' height='630' fill='%23EE4D2D'/><circle cx='600' cy='250' r='80' fill='white' opacity='0.9'/><path d='M550 220 L650 220 L630 270 L570 270 Z' fill='%23EE4D2D'/><circle cx='580' cy='200' r='15' fill='%23EE4D2D'/><circle cx='620' cy='200' r='15' fill='%23EE4D2D'/><rect x='540' y='330' width='120' height='60' rx='30' fill='white' opacity='0.9'/><circle cx='570' cy='410' r='25' fill='white' opacity='0.9'/><circle cx='630' cy='410' r='25' fill='white' opacity='0.9'/><rect x='550' y='385' width='80' height='8' fill='white' opacity='0.9'/><text x='600' y='500' text-anchor='middle' fill='white' font-family='Arial' font-size='48' font-weight='bold'>ShopeeFood</text><text x='600' y='550' text-anchor='middle' fill='white' font-family='Arial' font-size='28'>Giao hàng tận nơi</text></svg>">
+    <meta property="twitter:image" content="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1200 630'><rect width='1200' height='630' fill='%23EE4D2D'/><circle cx='600' cy='250' r='80' fill='white' opacity='0.9'/><path d='M550 220 L650 220 L630 270 L570 270 Z' fill='%23EE4D2D'/><circle cx='580' cy='200' r='15' fill='%23EE4D2D'/><circle cx='620' cy='200' r='15' fill='%23EE4D2D'/><rect x='540' y='330' width='120' height='60' rx='30' fill='white' opacity='0.9'/><circle cx='570' cy='410' r='25' fill='white' opacity='0.9'/><circle cx='630' cy='410' r='25' fill='white' opacity='0.9'/><rect x='550' y='385' width='80' height='8' fill='white' opacity='0.9'/><text x='600' y='500' text-anchor='middle' fill='white' font-family='Arial' font-size='48' font-weight='bold'>ShopeeFood</text><text x='600' y='550' text-anchor='middle' fill='white' font-family='Arial' font-size='28'>Ngon không cưỡng nổi</text></svg>">
     
     <!-- Additional Meta Tags -->
     <meta name="theme-color" content="#ff4d4f">
