--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <meta property="twitter:image" content="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1200 630'><rect width='1200' height='630' fill='%23EE4D2D'/><circle cx='600' cy='250' r='80' fill='white' opacity='0.9'/><path d='M550 220 L650 220 L630 270 L570 270 Z' fill='%23EE4D2D'/><circle cx='580' cy='200' r='15' fill='%23EE4D2D'/><circle cx='620' cy='200' r='15' fill='%23EE4D2D'/><rect x='540' y='330' width='120' height='60' rx='30' fill='white' opacity='0.9'/><circle cx='570' cy='410' r='25' fill='white' opacity='0.9'/><circle cx='630' cy='410' r='25' fill='white' opacity='0.9'/><rect x='550' y='385' width='80' height='8' fill='white' opacity='0.9'/><text x='600' y='500' text-anchor='middle' fill='white' font-family='Arial' font-size='48' font-weight='bold'>ShopeeFood</text><text x='600' y='550' text-anchor='middle' fill='white' font-family='Arial' font-size='28'>Ngon không cưỡng nổi</text></svg>">
     
     <!-- Additional Meta Tags -->
-    <meta name="theme-color" content="#ff4d4f">
+    <meta name="theme-color" content="#EE4D2D">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <meta name="apple-mobile-web-app-title" content="ShopeeFood">
@@ -56,7 +56,7 @@
 </head>
 <body>
     <div class="app">
-        <header class="header">
+        <header class="header home-only">
             <h1 class="logo">ShopeeFood</h1>
             <div class="location">
                 <svg width="16" height="20" viewBox="0 0 16 20" fill="none">
