--- a/index.html
+++ b/index.html
@@ -124,15 +124,15 @@
                             <img src="https://images.pexels.com/photos/776538/pexels-photo-776538.jpeg?auto=compress&cs=tinysrgb&w=300&h=300&fit=crop" alt="Collection">
                             <span>Phường Chợ Quán</span>
                         </div>
-                        <div class="collection-item">
+                        <div class="collection-item" data-collection="phuong-cau-lanh-ong">
                             <img src="https://images.pexels.com/photos/1581384/pexels-photo-1581384.jpeg?auto=compress&cs=tinysrgb&w=300&h=300&fit=crop" alt="Collection">
                             <span>Phường Cầu Lãnh Ông</span>
                         </div>
-                        <div class="collection-item">
+                        <div class="collection-item" data-collection="phuong-nhieu-loc">
                             <img src="https://images.pexels.com/photos/262978/pexels-photo-262978.jpeg?auto=compress&cs=tinysrgb&w=300&h=300&fit=crop" alt="Collection">
                             <span>Phường Nhiều Lộc</span>
                         </div>
-                        <div class="collection-item">
+                        <div class="collection-item" data-collection="phuong-khanh-hoi-4">
                             <img src="https://images.pexels.com/photos/941861/pexels-photo-941861.jpeg?auto=compress&cs=tinysrgb&w=300&h=300&fit=crop" alt="Collection">
                             <span>Phường Khánh Hội 4</span>
                         </div>
